# TypeIt

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TECHNICAL_GUIDE.md  linux_install.sh  vcpkg.json
.github/workflows/: cmake-single-platform.yml
files/: hard.txt  medium.txt  simple.txt
include/: CorrectnessCalculator.h  FileTextSource.h  FocusPosition.h  GameOptions.h  Input.h  Main.h  Menu.h  PerformanceArea.h  Screen.h  SpeedTypingSession.h  Text.h  TextInputArea.h  Timer.h  WordCalculator.h
include/core/: FileTextSource.h  Input.h  Menu.h  PerformanceArea.h  Screen.h  Text.h  Timer.h  WordCalculator.h
include/data/: ComponentOptions.h  FocusPosition.h  GameOptions.h  GameState.h  Style.h
include/engines/: InputAccuracyEngine.h  InputLineEngine.h  InputWordCountEngine.h  WordCalculatorEngine.h
include/interface/: ITextSource.h
include/view/: Main.h  PerformanceArea.h  SpeedTypingSession.h  TextInputArea.h
src/: CMakeLists.txt  main.cpp
src/components/: CorrectnessCalculator.cpp  FileTextSource.cpp  Input.cpp  Main.cpp  Menu.cpp  PerformanceArea.cpp  Screen.cpp  Screen.h  SpeedTypingSession.cpp  Text.cpp  TextInputArea.cpp  Timer.cpp  Timer.h  WordCalculator.cpp  WordCalculator.h
src/core/: CorrectnessCalculator.cpp  FileTextSource.cpp  Input.cpp  Menu.cpp  PerformanceArea.cpp  Screen.cpp  Text.cpp  Timer.cpp  WordCalculator.cpp
src/docs/: index.md
src/engines/: InputAccuracyEngine.cpp  InputLineEngine.cpp  InputWordCountEngine.cpp  WordCalculatorEngine.cpp
src/text_sources/: FileTextSource.cpp  FileTextSource.h  ITextSource.h
src/view/: Main.cpp  PerformanceArea.cpp  SpeedTypingSession.cpp  TextInputArea.cpp
tests/: CMakeLists.txt  test_file_text_source.cpp  test_input.cpp  test_input_accuracy.cpp  test_input_line_engine.cpp  test_screen.cpp  test_setup.cpp  test_text.cpp  test_timer.cpp  test_word_calculator.cpp  test_word_count.cpp
